--- a/wiki/Business_Model.wiki
+++ b/wiki/Business_Model.wiki
@@ -1,5 +1,5 @@
 || *Stage* || *Buyer's Process* || *Business Task* || *Customer Discovery* ||
-|| *Presented* || Heard about the tool in an event || Event Marketing and presentations || What captures your attention in an event? <br> Are you current looking for what? <br> How do you trust on a recomendation? ||
+|| *Presented* || Heard about the tool in an event || Event Marketing and presentations || What captures your attention in an event? <br> What are you current looking for? <br> How do you trust on a recomendation? <br> Are you current needing this type of solution? ||
 || *Suspect* || Search for Live Source on the Web || Web page reachable by easy keywords || What keywords you will use? ||
 || *Reach* || Clicks on the search result <br> and decide to read the Tool's Home Page || Web page that introduces and links to the SaaS <br> Web page attractive and easy to understand || What capture your attention in the home page? <br> What do you want to see in the web page? <br> What will make you try the product? ||
-|| *Sign up* || Clicks on the search result <br> and decide to read the Tool's Home Page || Web page attractive and easy to understand || What capture your attention in the home page? <br> What do you want to see in the web page? <br> What will make you try the product? ||
+|| *Sign up* || Clicks on the Sign up button, fill out the information and send || Visibly Freeware product <br> Visible Sign up button <br> Easy to sign up with not a lot of sign up fields <br> Send only one confirmation and welcome email || What you think when you are signing up for a new product? <br> What make you confortable on taking a signing up decision? <br> What do you expect after sign up? ||
