--- a/wiki/Business_Model.wiki
+++ b/wiki/Business_Model.wiki
@@ -3,4 +3,11 @@
 || *Suspect* || Search for Live Source on the Web || Web page reachable by easy keywords (Agile Developement Toolkit, Pair Programmimg Toolkit, Communication tool)|| What keywords you will use? ||
 || *Reach* || Clicks on the search result <br> and decide to read the Tool's Home Page || Web page that introduces and links to the SaaS <br> Web page attractive and easy to understand || What capture your attention in the home page? <br> What do you want to see in the web page? <br> What will make you try the product? <br> Would you open a demo? a video? screenshots? Other users comments? ||
 || *Sign up* || Clicks on the Sign up button, fill out the information and send || Visibly Freeware product <br> Visible Sign up button <br> Easy to sign up with not a lot of sign up fields <br> Send only one confirmation and welcome email || What made you sign up? What you think when you are signing up for a new product? <br> What make you confortable on taking a signing up decision? <br> What do you expect after sign up? ||
-|| *Try* || Create your own project on the system || Very easy to learn and start <br> Wizard to configure the buyer's project <br> Minimum steps as possible to start to try <br> Configuration Examples <br> Contact email for support|| Is the wizard good? <br> What can be better on the wizard? <br> What do you thinking when configuring your project on the system? <br> Do you feel unsafe? ||
+|| *Try* || Create your own project on the system || Very easy to learn and start <br> Wizard to configure the buyer's project <br> Minimum steps as possible to start to try <br> Configuration Examples <br> Contact email for support|| Is the wizard good? <br> What can be better on the wizard? <br> What do you think when configuring your project on the system? <br> Do you feel unsafe? ||
+|| *Use* || Play around the system for the first time || Very easy to use <br> Clear Main features and easy to reach || What do you expect from the tool? <br> How do you think you will find this specific feature? <br> Is the system easy to use? <br> Where do you have problems? <br> What changes do you suggest? <br> What is missing? <br> What features did you use? <br> How usefull are them? <br> Why did you use those features? ||
+|| *Come back* || After try, came back to use the system again || Very usefull features || ||
+|| *Use periodically* ||  || ||
+|| *Refer* ||  || ||
+|| *Add more users to the project* ||  || ||
+|| *Upgrade to Premium* ||  || ||
+
