Edited wiki page Hating_LiveSource through web user interface.

--- a/wiki/Hating_LiveSource.wiki
+++ b/wiki/Hating_LiveSource.wiki
@@ -1,13 +1,13 @@
-#summary One-sentence summary of this page.
-
-= Introduction =
-
-Add your content here.
+Live Source is a Web Toolkit that helps software companies develop software faster and cheaper. Live Source improves communication and automatically generates plans, documents, and metrics directly from the source code of a software project without extra effort from the developers team. There is a prototype already developed for the product.
 
 
-= Details =
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+
+The description looks like snake oil.
+
+I always hated self generated documents, They suck.
+What metrics are those?? what plans?? What docs?? are they good?
+
+There is always an extra effort for everything, nothing is free.
+
+A prototype already developed and not luched yet?, means your loose your time.
