--- a/wiki/1MinutePitches.wiki
+++ b/wiki/1MinutePitches.wiki
@@ -1,13 +1,5 @@
-#summary One-sentence summary of this page.
-
-= Introduction =
-
-Add your content here.
+Live Source is a Web-based Toolkit that helps software companies develop software faster and cheaper. Live Source improves communication and automatically generates plans, documents, and metrics directly from the project's source code without any extra effort from the developers team.
 
 
-= Details =
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+Live Source is a Web-based Toolkit that helps software product owners understand technical issues and communicate better with their developers team. Live Source automatically generates plans, documents, and metrics directly from the project's source code without any extra effort from the team.
