--- a/wiki/Strengths_Weaknesses.wiki
+++ b/wiki/Strengths_Weaknesses.wiki
@@ -1,8 +1,8 @@
-Strengths
+= Strengths =
 Persistent, strong personality, high self-esteem, experienced in my professional area, perfectionist
 
-Weaknesses
+= Weaknesses =
 Not fluent in English, selfish, impatient, perfectionist
 
-Leverage of my strengths
+= Leverage of my strengths =
 I will use my professional experience to build a solution that could solve my professional pains and also the all others professionals in the same area as mine, that is computer programming.
