--- a/src/sourceagile/client/InternationalizationConstants_es.properties
+++ b/src/sourceagile/client/InternationalizationConstants_es.properties
@@ -33,4 +33,4 @@ edit = Edición
 test = Test
 noTestCreated = Ninguno teste creado.
 createUnitTest = Crear Test Unitario
-viewSourceCode = Ver el Código Fuente
+viewSourceCode = Ver el Código Fuente del Test Unitario
