--- a/trunk/src/sourceagile/client/InternationalizationConstants_pt_BR.properties
+++ b/trunk/src/sourceagile/client/InternationalizationConstants_pt_BR.properties
@@ -33,4 +33,4 @@ edit = Editar
 test = Teste
 noTestCreated = Nenhum teste criado.
 createUnitTest = Criar Teste Unitario
-viewSourceCode = Visualizar o Código Fonte
+viewSourceCode = Visualizar o Código Fonte do Teste Unitário
