--- a/src/sourceagile/client/InternationalizationConstants_es.properties
+++ b/src/sourceagile/client/InternationalizationConstants_es.properties
@@ -6,6 +6,7 @@ selectAProject = Seleccione un Proyecto
 user = Usuario
 password = Contraseña
 logIn = Entrar
+howToUse = Cómo Utilizar
 readMore = Leer más
 project = Proyecto
 about = Sobre
