--- a/src/sourceagile/client/InternationalizationConstants_pt_BR.properties
+++ b/src/sourceagile/client/InternationalizationConstants_pt_BR.properties
@@ -6,6 +6,7 @@ selectAProject = Selecione um Projeto
 user = Usuário
 password = Senha
 logIn = Entrar
+howToUse = Como Utilizar
 readMore = Saiba mais
 project = Projeto
 about = Sobre
