--- a/src/sourceagile/client/InternationalizationConstants_es.properties
+++ b/src/sourceagile/client/InternationalizationConstants_es.properties
@@ -6,6 +6,7 @@ selectAProject = Seleccione un Proyecto
 user = Usuario
 password = Contraseña
 logIn = Entrar
+howToUse = Cómo Utilizar
 readMore = Leer más
 project = Proyecto
 about = Sobre
@@ -33,4 +34,4 @@ edit = Edición
 test = Test
 noTestCreated = Ninguno teste creado.
 createUnitTest = Crear Test Unitario
-viewSourceCode = Ver el Código Fuente
+viewSourceCode = Ver el Código Fuente del Test Unitario
