--- a/src/sourceagile/client/InternationalizationConstants_pt_BR.properties
+++ b/src/sourceagile/client/InternationalizationConstants_pt_BR.properties
@@ -6,6 +6,7 @@ selectAProject = Selecione um Projeto
 user = Usuário
 password = Senha
 logIn = Entrar
+howToUse = Como Utilizar
 readMore = Saiba mais
 project = Projeto
 about = Sobre
@@ -33,4 +34,4 @@ edit = Editar
 test = Teste
 noTestCreated = Nenhum teste criado.
 createUnitTest = Criar Teste Unitario
-viewSourceCode = Visualizar o Código Fonte
+viewSourceCode = Visualizar o Código Fonte do Teste Unitário
